# is-you-cat

./: README.md  report.md
app/: README.md  debootstrap-README.md
app/source/: AbstractCatModel.cpp  CatModelFactory.cpp  CatModelFactory.hpp  ONNXBimodel.cpp  ONNXBimodel.hpp  TFModel.hpp  TorchModel.hpp  decorate_frame.cpp  decorate_frame.hpp  hsv.hpp  main.cpp  rgb.cpp
cat-fetcher/: get-data.sh  split-cats.py
chroni-cat/: Makefile  README.md  main.cpp
is-you-cat/: OneClassTraining.ipynb  Pretrained_Networks_pynb.ipynb  Pruning.ipynb  PytorchPretrainedNetworks.ipynb  README.md  TensorflowTraining.ipynb
is-you-cat/source/: AbstractCatModel.cpp  AbstractCatModel.hpp  CMakeLists.txt  CatModelFactory.cpp  CatModelFactory.hpp  CatModelInterface.hpp  HaarCascadeModel.cpp  HaarCascadeModel.hpp  ONNXBimodel.cpp  ONNXBimodel.hpp  ONNXModel.cpp  ONNXModel.hpp  TFModel.cpp  TFModel.hpp  TorchModel.cpp  TorchModel.hpp  decorate_frame.cpp  hsv.cpp  hsv.hpp  main.cpp  rgb.hpp
is-you-cat/tf/tensorflow_src/tensorflow/lite/examples/minimal/: CMakeLists.txt  minimal.cc
notebooks/: MotionDetector.ipynb  README.md
utils/cat-fetcher/: README.md  get_data.sh
utils/chroni-cat/: README.md
